--- a/proyecto-boostrap.css
+++ b/proyecto-boostrap.css
@@ -1,3 +1,4 @@
+
 .foto-logo {
     height: 60px;
 }
@@ -5,3 +6,29 @@
 .cuadros {
     height: 30px;
 }
+
+.fotos-masu {
+    height: 400px;
+    width: 400px;
+    padding: 10px;
+}
+
+.div-fotos-masu {
+    margin-left:55px;
+}
+
+.div-masu {
+    height: 400px;
+    width: 400px;
+    padding: 50px;
+    margin-bottom: 60px;
+}
+
+.card-texto {
+    display: flex;
+}
+
+.fecha-card-texto {
+    margin-left: 40px;
+}
+
